Bug 1834141 - Implement oncancel idl attribute. r=dom-core,webidl,saschanaz,edgar

Differential Revision: https://phabricator.services.mozilla.com/D182198